# computer-vision-technology

./: .gitignore  README.md  hw3_part3.ipynb  hw3_part_1.ipynb  hw3_part_2.ipynb  inference.py  pyproject.toml  train.py
Topic 0. Intro/: README.md
Topic 0. Video Processing/: .gitignore  README.md  ffmpeg_commands.sh  run.py  streamer.py
Topic 1. Classic Computer Vision/: Homework.md  README.md
Topic 1. One stage Object detection/: .gitignore  CoCo2YOLOannot.py  README.md  dataset.py  generate_csv.py  get_coco2017_subset.py  hw_1.py  inference.py  model.py  pyproject.toml  requirements.txt  train.py  utils.py  yolo_model.py
Topic 1. One stage Object detection/configs/: train_config.yaml  val_config.yaml
Topic 1. One stage Object detection/modules/: config.py  dataset.py  utils.py
Topic 1. One stage Object detection/src/: train.py
Topic 1. One stage Object detection/src/dataset/: dataset.py
Topic 1. One stage Object detection/src/metric/: loss.py  utils.py
Topic 1. One stage Object detection/src/model/: model.py
Topic 1. Tracking and Re-Identification/: README.md  model.py  train.py  utils.py
Topic 10. Multimodal Computer Vision/: README.md  crnn.ipynb  run_vllm.sh  transformer.ipynb
Topic 2. Image Classification with Neural Networks/: README.md  cnn-feature-extraction.ipynb  cnn.ipynb  vision_transformer.ipynb  vit-feature-extraction.ipynb
Topic 2. Object detection and Semantic Segmentation/: Metrics.py  README.md  creare_track.py  fastapi_server.py  index.html  requirements.txt  track_1.py  track_10.py  track_11.py  track_12.py  track_13.py  (+10 more)
(+156 files in other folders)
